[gd_scene load_steps=12 format=3 uid="uid://b00q3c5tjoe4o"]

[ext_resource type="Theme" uid="uid://bqjx1o53xo1v6" path="res://Assets/Themes/MainTheme.tres" id="1_7wiki"]
[ext_resource type="Script" path="res://ProjectList.gd" id="1_kv3j5"]
[ext_resource type="Texture2D" uid="uid://bcl1sle6le3em" path="res://Assets/Basic Icons/list-solid.svg" id="3_krk3e"]
[ext_resource type="Texture2D" uid="uid://dsdke1duouxap" path="res://Assets/Splash Screen/Version.png" id="4_1lhqy"]
[ext_resource type="Texture2D" uid="uid://cm4pwow6cnpyp" path="res://Assets/Splash Screen/Default_logo_for_a_DD_world_building_app_0_a8c7ff09-1ff9-4d30-9db9-1eaac59c2815_0.png" id="5_tvpou"]
[ext_resource type="Texture2D" uid="uid://b0etbfocqvbsq" path="res://Assets/Splash Screen/LogoTitle.png" id="6_i4gdu"]
[ext_resource type="Texture2D" uid="uid://bo61x22sej7hd" path="res://Assets/Basic Icons/up-right-from-square-solid.svg" id="6_liieb"]
[ext_resource type="Texture2D" uid="uid://b07vu36odc0rc" path="res://addons/godot-firebase/circle-user-regular(1).svg" id="8_boox6"]
[ext_resource type="FontFile" uid="uid://cnk6bhvrw6w6a" path="res://Assets/Fonts/CaskaydiaCoveNerdFontMono-Regular.ttf" id="9_torc2"]
[ext_resource type="PackedScene" uid="uid://cdstvg1e5a7mn" path="res://AccountOptions.tscn" id="10_xqe5k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwv1g"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.141176, 0.14902, 0.164706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7wiki")
script = ExtResource("1_kv3j5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.133333, 0.145098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Panel2" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
text = "New"

[node name="Button2" type="Button" parent="VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(53, 0)
layout_mode = 2
text = "Import"

[node name="Button3" type="Button" parent="VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(39, 0)
layout_mode = 2
text = "Scan"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search Projects"
clear_button_enabled = true
drag_and_drop_selection_enabled = false
select_all_on_focus = true
caret_blink = true

[node name="Button4" type="Button" parent="VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel2/HBoxContainer/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_krk3e")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
text = "Sort"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(150, 29)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Last Modified"
popup/item_0/id = 0
popup/item_1/text = "Name"
popup/item_1/id = 1
popup/item_2/text = "Ruleset"
popup/item_2/id = 3
popup/item_3/text = "Tags"
popup/item_3/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Panel3" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = 12.0
offset_right = -14.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="ProjectGrid" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/Panel3/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Panel4" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -34.0
offset_right = 42.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_1lhqy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Panel4/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
text = "v.0.0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
texture = ExtResource("5_tvpou")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_i4gdu")
expand_mode = 1
stretch_mode = 5

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer"]
custom_minimum_size = Vector2(0, 210)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_uwv1g")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Open"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Rename"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Duplicate"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Manage Details"

[node name="Button5" type="Button" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
text = "Delete"

[node name="Panel2" type="Panel" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_uwv1g")

[node name="ProjectInfo" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel2"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "Name:
Ruleset:
Date Created:
Modified On:
Tags:"
fit_content = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 35.0
grow_horizontal = 0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel2/Button"]
self_modulate = Color(1, 1, 1, 0.819608)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.5
offset_top = -8.5
offset_right = 8.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture_normal = ExtResource("6_liieb")
stretch_mode = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Panel4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -35.0
offset_right = -11.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/Panel4/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_boox6")
expand_mode = 1
stretch_mode = 5

[node name="RenamePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.360784)

[node name="Button" type="Button" parent="RenamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Panel" type="Panel" parent="RenamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -91.0
offset_right = 199.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RenamePanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = -9.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="RenamePanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Rename Project"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="RenamePanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 29)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="RenamePanel/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/mono_font = ExtResource("9_torc2")
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "[color=#E6F385][code][/code] Warning: This will not change the directory name just the name displayed within the program."
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="RenamePanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="RenamePanel/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="RenamePanel/Panel/VBoxContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
text = "Cancel"

[node name="CenterContainer2" type="CenterContainer" parent="RenamePanel/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="RenamePanel/Panel/VBoxContainer/HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(100, 29)
layout_mode = 2
text = "Rename"

[node name="AccountOptions" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.360784)

[node name="Button" type="Button" parent="AccountOptions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Panel" parent="AccountOptions" instance=ExtResource("10_xqe5k")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = -242.0
offset_right = 432.0
offset_bottom = 242.0

[node name="NativeFileDialog" type="NativeFileDialog" parent="."]
title = "Open a Directory"
file_mode = 2
access = 2

[connection signal="button_down" from="VBoxContainer/Panel2/HBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="VBoxContainer/Panel2/HBoxContainer/Button2" to="." method="_on_Import_button_up"]
[connection signal="button_down" from="VBoxContainer/Panel2/HBoxContainer/Button3" to="." method="_on_button_3_button_down"]
[connection signal="text_changed" from="VBoxContainer/Panel2/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer/Button" to="." method="_on_open_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer/Button2" to="." method="_on_rename_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Panel4/VBoxContainer/Panel/VBoxContainer/Button5" to="." method="_on_delete_button_down"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Panel4/Button" to="." method="_on_button_button_up"]
[connection signal="button_down" from="RenamePanel/Button" to="." method="_on_renamepanelclose_button_down"]
[connection signal="button_down" from="RenamePanel/Panel/VBoxContainer/HBoxContainer/CenterContainer/Button" to="." method="_on_renamepanelclose_button_down"]
[connection signal="button_down" from="RenamePanel/Panel/VBoxContainer/HBoxContainer/CenterContainer2/Button" to="." method="_on_renamepaneldone_button_down"]
[connection signal="button_down" from="AccountOptions/Button" to="." method="_on_closeaccount_button_up"]
[connection signal="dir_selected" from="NativeFileDialog" to="." method="_on_native_file_dialog_dir_selected"]
